--- a/web/content/templates/talk.html
+++ b/web/content/templates/talk.html
@@ -22,7 +22,7 @@
 						<span>Rating: {{talk.rating}}</span>
 					</div>
 				</div>
-				<ul class="subscribers" ng-if="!!talk.participants.length" >
+				<ul class="subscribers clearfix" ng-if="!!talk.participants.length" >
 					<li ng-repeat="(key, value) in talk.participants">
 						<a class="participant" href="#/userinfo/{{value.nickname}}">{{value.nickname}}</a>
 					</li>
@@ -32,10 +32,10 @@
 				<div class="commentsWrapper">
 					<comment ng-repeat="(key, value) in comments" data="value"></comment>
 				</div>
-				<a href="more" class="button" ng-click="moreComments($event)" ng-if="!isCommentsEnd">More</a>
+				<a href="more" class="button more" ng-click="moreComments($event)" ng-if="!isCommentsEnd">More</a>
 				<form name="commentForm" class="commentsCreater">
 					<textarea name="comment" placeholder="Comment" ng-model="talk.newComment" required></textarea>
-					<button class="button" ng-click="createComment($event)" ng-disabled="!commentForm.$valid">Submit</button>
+					<button class="button addComment" ng-click="createComment($event)" ng-disabled="!commentForm.$valid">Submit</button>
 				</form>
 			</div>
 		</div>
