Change error handlers functionality

--- a/web/content/templates/error.html
+++ b/web/content/templates/error.html
@@ -1,5 +1,5 @@
 <div class="errorBlock">
-<span class="error">Sorry, server error happened.</span>
-<span class="vcard warning">{{eve.errorMessage}}</span>
-<a href="../#{{eve.backUrl}}">Back</a>
+	<span class="error">{{ eve.status || "Sorry, server error happened." }}</span>
+	<span class="vcard warning">{{eve.errorMessage}}</span>
+	<a href="../#{{eve.backUrl}}">Back</a>
 </div>
